--- a/calico-enterprise/getting-started/compatibility.mdx
+++ b/calico-enterprise/getting-started/compatibility.mdx
@@ -54,6 +54,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | kOps and Kubernetes versions | {{prodname}} support                                         |
 | -------------------- | ---------------------------- | ------------------------------------------------------------ |
+| 3.19                 | 1.26 - 1.28                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.18                 | 1.26 - 1.28                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.17                 | 1.25 - 1.26                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
 | 3.16                 | 1.24 - 1.25                  | - {{prodname}} CNI with network policy<br />- AWS CNI with {{prodname}} network policy |
@@ -69,6 +70,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | Kubernetes/kubeadm versions | {{prodname}} support                 |
 | -------------------- | --------------------------- | ------------------------------------ |
+| 3.19                 | 1.27 - 1.29                 | {{prodname}} CNI with network policy |
 | 3.18                 | 1.26 - 1.28                 | {{prodname}} CNI with network policy |
 | 3.17                 | 1.25 - 1.27                 | {{prodname}} CNI with network policy |
 | 3.16                 | 1.24 - 1.26                 | {{prodname}} CNI with network policy |
@@ -88,8 +90,9 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | MKE version                          | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------------------------ | ------------------- |
-| 3.18                 | MKE 3.7.1                            | {{prodname}} CNI with network policy | 1.27                |
-| 3.17                 | MKE 3.7.1                            | {{prodname}} CNI with network policy | 1.27                |
+| 3.19                 | MKE 3.7                              | {{prodname}} CNI with network policy | 1.27                |
+| 3.18                 | MKE 3.7                              | {{prodname}} CNI with network policy | 1.27                |
+| 3.17                 | MKE 3.7                              | {{prodname}} CNI with network policy | 1.27                |
 | 3.16                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.15                 | MKE 3.6                              | {{prodname}} CNI with network policy | 1.24                |
 | 3.14                 | MKE 3.5                              | {{prodname}} CNI with network policy | 1.21                |
@@ -107,6 +110,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | OpenShift versions for Kubernetes | {{prodname}} support                 |
 | -------------------- | --------------------------------- | ------------------------------------ |
+| 3.19                 | 4.12 - 4.14                       | {{prodname}} CNI with network policy |
 | 3.18                 | 4.12 - 4.14                       | {{prodname}} CNI with network policy |
 | 3.17                 | 4.12 - 4.13                       | {{prodname}} CNI with network policy |
 | 3.16                 | 4.10 - 4.12                       | {{prodname}} CNI with network policy |
@@ -126,6 +130,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | RKE version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ----------- | ------------------------------------ | ------------------- |
+| 3.19                 | 1.5         | {{prodname}} CNI with network policy | 1.27                |
 | 3.18                 | 1.4         | {{prodname}} CNI with network policy | 1.26                |
 | 3.17                 | 1.4         | {{prodname}} CNI with network policy | 1.25                |
 | 3.16                 | 1.4         | {{prodname}} CNI with network policy | 1.23                |
@@ -145,6 +150,7 @@ Kubernetes version support aligns with [upstream Kubernetes](#kubernetes-kubeadm
 
 | {{prodname}} version | {{prodname}} support                 | Kubernetes versions |
 | -------------------- | ------------------------------------ | ------------------- |
+| 3.19                 | {{prodname}} CNI with network policy | 1.26 - 1.28         |
 | 3.18                 | {{prodname}} CNI with network policy | 1.26 - 1.28         |
 | 3.17                 | {{prodname}} CNI with network policy | 1.25 - 1.26         |
 | 3.16                 | {{prodname}} CNI with network policy | 1.24 - 1.25         |
