DOCS-2071 Deprecating and removing features

--- a/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
@@ -24,11 +24,18 @@ We've added the following improvements to the [Security events dashboard](../thr
 
 - Jira and Slack webhook integration for security event alerts
 
-By [configuring security event alerts](../threat/configuring-webhooks), you can push alerts from the Security Overview dashboard in Manager UI to Jira and Slack. This feature allows incident response and security teams to use native tools to respond to security event alerts.
+  By [configuring security event alerts](../threat/configuring-webhooks), you can push security event alerts to Slack, Jira, or an external HTTP endpoint of your choice.
+  This lets incident response and security teams to use native tools to respond to security event alerts.
 
 - Added threat feed alerts
 
-If you have implemented global threat feeds for suspicious activity (domains or suspicious IPs), alerts are now visible in the Security Overview dashboard. For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
+  If you have implemented global threat feeds for suspicious activity (domains or suspicious IPs), alerts are now visible in the Security Overview dashboard.
+  For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
+
+## Deprecated and removed features
+
+* The AWS security groups integration is removed in this release.
+* The ingress log collection feature is removed in this release.
 
 ## January 31, 2024 (version 18.3.0)
 
@@ -74,7 +81,11 @@ This release adds support for Kubernetes 1.28.
 ### Deprecated and removed features
 
 * The anomaly detection feature is removed in this release.
-If you enabled this feature, you will now stop receiving anomaly detection alerts.
+  If you enabled this feature, you will now stop receiving anomaly detection alerts.
+* The AWS security groups integeration is deprecated in this release.
+  It will be removed in a future release.
+* The ingress log collection feature is deprecated in this release.
+  It will be removed in future release.
 
 ### Bug fixes
 
