--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -80,10 +80,18 @@ We've added new options for Helm installs including: set the number of replicas 
 
 For more information, see [Helm installation reference](../reference/installation/helm_customization).
 
-### Deprecated and removed features
+## Deprecated and removed features
 
-* The anomaly detection feature is removed in this release. If anomaly detection is enabled and you upgrade to {{prodname}} 3.18, you will stop receiving anomaly detection alerts. 
-* [Manual install for Windows](../getting-started/install-on-clusters/windows-calico/manual-install/) will be deprecated in a future release. Starting in this release, the [standard installation is operator-based](../getting-started/install-on-clusters/windows-calico/operator).
+* The anomaly detection feature is removed in this release.
+  If anomaly detection is enabled and you upgrade to {{prodname}} 3.18, you will stop receiving anomaly detection alerts.
+* The [manual installation method for Windows](../getting-started/install-on-clusters/windows-calico/manual-install/) is deprecated and will be removed in a future release.
+  The recommended installation method is now [operator-based](../getting-started/install-on-clusters/windows-calico/operator).
+* The [FIPS mode](../operations/fips.mdx) feature is deprecated in this release.
+  It will be removed in Calico Enterprise 3.19.
+* The [AWS security groups integration](../network-policy/policy-firewalls/aws-integration/index.mdx) is deprecated in this release.
+  It will be removed in Calico Enterprise 3.19.
+* The ingress log collection feature is deprecated in this release.
+  It will be removed in Calico Enterprise 3.19.
 
 ## Technology Preview features
 
