--- a/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/release-notes/index.mdx
@@ -29,18 +29,26 @@ We've updated the Endpoints page in Manager UI with a new flow logs panel so you
 
 We've added the following improvements to the [Security events dashboard](../threat/security-event-management):
 
+We've added the following improvements to the [Security events dashboard](../threat/security-event-management):
+
 - Jira and Slack webhook integration for security event alerts
 
-   By [configuring security event alerts](../threat/configuring-webhooks), you can push alerts from the Security Overview dashboard in Manager UI to Jira and Slack. This feature allows incident response and security teams to use native tools to respond to security event alerts.
+  By [configuring security event alerts](../threat/configuring-webhooks), you can push security event alerts to Slack, Jira, or an external HTTP endpoint of your choice.
+  This lets incident response and security teams to use native tools to respond to security event alerts.
 
 - Added threat feed alerts
 
-   If you have implemented global threat feeds for suspicious activity (domains or suspicious IPs), alerts are now visible in the Security Overview dashboard. For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
+  If you have implemented global threat feeds for suspicious activity (domains or suspicious IPs), alerts are now visible in the Security Overview dashboard.
+  For more information on threat feeds, see [Trace and block suspicious IPs](../threat/suspicious-ips).
 
-### Deprecated and removed features
+## Deprecated and removed features
 
-* The anomaly detection feature was removed in v3.18.1 If anomaly detection is enabled and you upgrade to {{prodname}} 3.18, you will stop receiving anomaly detection alerts.
-* [Manual install for Windows](../getting-started/install-on-clusters/windows-calico/manual-install/) will be deprecated in a future release. Starting in v3.18.1, the [standard installation is operator-based](../getting-started/install-on-clusters/windows-calico/operator).
+* The FIPS mode feature is removed in this release.
+* The AWS security groups integration is removed in this release.
+  It will be removed in Calico Enterprise 3.19.
+* The ingress log collection feature is removed in this release.
+* The [manual installation method for Windows](../getting-started/install-on-clusters/windows-calico/manual-install/) is deprecated and will be removed in a future release.
+  The recommended installation method is now [operator-based](../getting-started/install-on-clusters/windows-calico/operator).
 
 ## Technology Preview features
 
