[CORE-10192] Use 'crane cp' for windows images
Use 'crane cp' to copy windows images to private registries as docker
'pull+tag+push' doesn't work correctly for them.

Update OSS alternate registry docs to add windows images.

Update OSS releases.json for windows images and update vnext releases.json
versions to v3.28.0.

--- a/calico/operations/image-options/imageset.mdx
+++ b/calico/operations/image-options/imageset.mdx
@@ -102,7 +102,7 @@ spec:
       digest: 'sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef'
     - image: 'calico/pod2daemon-flexvol'
       digest: 'sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef'
-    - image: 'calico/windows-upgrade'
+    - image: 'calico/node-windows'
       digest: 'sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef'
     - image: 'tigera/operator'
       digest: 'sha256:0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef'
@@ -167,7 +167,7 @@ This script will only work if using the default registries and image paths.
 ```
 #!/bin/bash -e
 
-images=(calico/apiserver calico/cni calico/kube-controllers calico/node calico/typha calico/pod2daemon-flexvol calico/windows-upgrade tigera/key-cert-provisioner tigera/operator)
+images=(calico/apiserver calico/cni calico/kube-controllers calico/node calico/typha calico/pod2daemon-flexvol calico/node-windows tigera/key-cert-provisioner tigera/operator)
 
 OPERATOR_IMAGE={{tigeraOperator.registry}}/{{tigeraOperator.image}}:{{tigeraOperator.version}}
 echo "Pulling $OPERATOR_IMAGE"
