--- a/calico/operations/image-options/alternate-registry.mdx
+++ b/calico/operations/image-options/alternate-registry.mdx
@@ -33,6 +33,7 @@ An **image path** is a directory in a registry that contains images required to 
 - {{prodname}} is managed by the operator
 - Configure pull access to your registry
 - If you are using a private registry that requires user authentication, ensure that an image pull secret is configured for your registry in the tigera-operator namespace. Set the environment variable, `REGISTRY_PULL_SECRET` to the secret name. For help, see `imagePullSecrets` and `registry` fields, in [Installation resource reference](../../reference/installation/api.mdx).
+- Use the [Crane command](https://github.com/google/go-containerregistry/blob/main/cmd/crane/README.md) to manage the {{prodnameWindows}} images, as using `docker pull` commands for these images may not work depending on the operating system and version in which the commands are run.
 
 ## How to
 
@@ -40,7 +41,7 @@ The following examples show the path format for public and private registry, `$R
 
 ### Push {{prodname}} images to your registry
 
-To install images from your registry, you must first pull the images from Tigera's registry, retag them with your own registry, and then push the newly-tagged images to your own registry.
+To install images from your registry, you must first pull the images from Tigera's registry, retag them with your own registry, and then push the newly-tagged images to your own registry. Use the `crane cp` command instead of pulling+retagging+pushing on the {{prodnameWindows}} images (`node-windows` and `cni-windows`).
 
 <MaintenanceImageOptionsAlternateRegistry />
 
