--- a/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/web-application-firewall.mdx
@@ -171,11 +171,11 @@ You can change WAF rule so that the traffic is blocked.
 | Off    | Be cautious about using this option. Traffic is not denied nor alerted. |No                                                                      | Yes         |
                                          
 
-### Manage your rulesets
+### Manage your rule sets
 
-The default rulesets work fine for most deployments. However, you can customize them to suit your requirements.
+The default rule sets work fine for most deployments. However, you can customize them to suit your requirements.
 
-By default, {{prodname}} ships with CoreRuleset v3.3.5 with the following setup files pre-loaded:
+By default, {{prodname}} ships with Core Rule Set  v3.3.5 with the following setup files pre-loaded:
 
 - [tigera.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/embed/coreruleset/tigera.conf)
 
@@ -186,7 +186,7 @@ To start creating your rules, it is recommended that you download the files (all
   ```bash
   git clone -depth=1 https://github.com/tigera/operator 
   ```
-2. Change directory into the actual modsec ruleset files we use.
+2. Change directory into the actual modsec rule set files we use.
 
   ```bash
   cd pkg/render/applicationlayer/modsec-core-ruleset
@@ -207,7 +207,7 @@ which then triggers a rolling restart of your L7 pods. This means that the HTTP 
 
 :::note
 
-It is important to adhere to [CoreRuleset documentation](https://coreruleset.org/docs) on how to edit the behaviour of
+It is important to adhere to  the [Core Rule Set documentation](https://coreruleset.org/docs) on how to edit the behaviour of
  your WAF. A good place to begin at is the [Installing Core Rule Set](https://coreruleset.org/docs/deployment/install/).
 
 In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before 
