--- a/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18/threat/web-application-firewall.mdx
@@ -163,7 +163,7 @@ Run a simple curl command from any pod inside your cluster targeting a service y
 ### Fine-tuning your WAF 
 
 #### Manage your rules
-The default rulesets work fine for most deployments. However, you can customize them to suit your requirements.
+The default rule sets work fine for most deployments. However, you can customize them to suit your requirements.
 Some common changes are detailed below, for example:
 
 - [Enabling blocking mode](#set-waf-rule-to-block-traffic)
@@ -171,14 +171,14 @@ Some common changes are detailed below, for example:
 - [Fine-tuning a rule](#change-other-default-settings)
 - [Disabling certain rules](#disable-certain-rules)
 
-By default, {{prodname}} ships with CoreRuleset v3.3.5 with the following setup files pre-loaded:
+By default, {{prodname}} ships with Core Rule Set  v3.3.5 with the following setup files pre-loaded:
 
 - [tigera.conf](https://github.com/tigera/operator/blob/master/pkg/render/applicationlayer/embed/coreruleset/tigera.conf)
 
 There are two ways to edit your rules. 
 1. Edit the configmap directly using kubectl. The config map combines all the rule files together, so you will need to know how to search and find the exact place in the configmap that you want to update. 
 
-2. If you want to modify the rules in any meaningful way, it is recommended that you download the files locally and modify before replacing the configmap. In OWASP, it is recommended you disable rules or change configuration by modifying a set of specific metadata files and exclusion files, and not modify any of the main rule files directly. You can, of course, decide to replace the ruleset entirely with your own set of custom rules. This is completely fine once the rules are written in the same SecRule syntax understood by ModSecurity. We recommend you keep a version of your rule files safe in version control like git.
+2. If you want to modify the rules in any meaningful way, it is recommended that you download the files locally and modify before replacing the configmap. In OWASP, it is recommended you disable rules or change configuration by modifying a set of specific metadata files and exclusion files, and not modify any of the main rule files directly. You can, of course, decide to replace the rule set entirely with your own set of custom rules. This is completely fine once the rules are written in the same SecRule syntax understood by ModSecurity. We recommend you keep a version of your rule files safe in version control like git.
 
 To download and modify the rule files:
 
@@ -188,7 +188,7 @@ To download and modify the rule files:
   git clone --depth=1 https://github.com/tigera/operator
   cd operator
   ```
-2. Change directory into the actual modsec ruleset files we use.
+2. Change directory into the actual modsec rule set files we use.
 
   ```bash
   cd pkg/render/applicationlayer/modsec-core-ruleset
@@ -210,7 +210,7 @@ which then triggers a rolling restart of your L7 pods. This means that the HTTP 
 
 :::note
 
-It is important to adhere to [CoreRuleset documentation](https://coreruleset.org/docs) on how to edit the behaviour of
+It is important to adhere to  the [Core Rule Set documentation](https://coreruleset.org/docs) on how to edit the behaviour of
  your WAF. A good place to begin at is the [Installing Core Rule Set](https://coreruleset.org/docs/deployment/install/).
 
 In many scenarios, the default example CRS configuration will be a good enough starting point. It is recommended to review the example configuration file before 
