--- a/calico-enterprise_versioned_docs/version-3.17/threat/honeypod/honeypod-controller.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/threat/honeypod/honeypod-controller.mdx
@@ -78,7 +78,7 @@ kubectl apply -f {{filesUrl}}/manifests/threatdef/honeypod/controller_os.yaml
 
 ### Add custom Snort rules
 
-You can add custom Snort rules to the controller using a ConfigMap. By default, {{prodname}} uses the [Snort Community Ruleset](https://www.snort.org/downloads/#rule-downloads).
+You can add custom Snort rules to the controller using a ConfigMap. By default, {{prodname}} uses the [Snort Community rule set](https://www.snort.org/downloads/#rule-downloads).
 
 The following manifest provides the method to add individual custom signatures:
 
@@ -98,7 +98,7 @@ EOF
 
 Refer to [Snort Users Manual](https://www.snort.org/documents) for writing Snort signatures.
 
-To add a Snort-compatible ruleset file:
+To add a Snort-compatible rule set file:
 
 ```bash
 kubectl create cm localrule -n tigera-intrusion-detection --from-file=rules=<SNORT-RULESET-LOCATION>
