Test for vale action

--- a/calico-enterprise_versioned_docs/version-3.19-1/network-policy/default-deny.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/network-policy/default-deny.mdx
@@ -6,6 +6,10 @@ description: Implement a global default deny policy in the default tier to block
 
 In this article you will learn when and how to create a global default deny policy for the cluster.
 
+Don't you loove kubernetes?
+
+He likes to write yamls for tigera products.
+
 ### What is it, when should you create one?
 
 A global default deny policy ensures that unwanted traffic (ingress and egress) is denied by default. Pods without policy (or incorrect policy) are not allowed traffic until appropriate network policy is defined. Although the staging policy tool will help you find incorrect and missing policy, a global deny helps mitigate against other lateral malicious attacks.
