Remove deprecated '-netAdapterName' argument from Install-Containerd.ps1 invocation

--- a/calico-enterprise/getting-started/install-on-clusters/windows-calico/operator.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/windows-calico/operator.mdx
@@ -56,7 +56,7 @@ To install containerd on the Windows node and configure the containerd service:
 
 ```powershell
 Invoke-WebRequest {{windowsScriptsURL}}/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
-c:\Install-Containerd.ps1 -ContainerDVersion 1.6.22 -netAdapterName Ethernet -skipHypervisorSupportCheck -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
+c:\Install-Containerd.ps1 -ContainerDVersion 1.6.22 -skipHypervisorSupportCheck -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
 ```
 
 If you have an existing {{prodnameWindows}} installation using the manual method, your Windows nodes may have already joined the cluster.
