Changes syntax for componentImagePlugin.js, adds imports for DomainNames component

--- a/calico-enterprise/operations/clis/calicoctl/install.mdx
+++ b/calico-enterprise/operations/clis/calicoctl/install.mdx
@@ -270,7 +270,7 @@ If you run these commands from your local machine (instead of a host node), some
    registry.
 
    ```bash
-   docker pull {{registry}}{% component_image("calicoctl") %}
+   docker pull {{registry}}%% component_image("calicoctl") %%
    ```
 
 1. Confirm that the image has loaded by typing `docker images`.
