--- a/calico_versioned_docs/version-3.27/reference/typha/overview.mdx
+++ b/calico_versioned_docs/version-3.27/reference/typha/overview.mdx
@@ -25,9 +25,8 @@ If you're using the Operator installation, then the operator will automatically 
 
 Here's the scaling logic it uses:
 
-## Typha Replicas per Node Count
-
-| Nodes | Replicas 
+Typha Replicas per Node Count
+| Nodes | Replicas |
 | ---- | ---- | 
 | `1-2` | 1 |
 | `3-4` | 2 |
