Update policy resources with list examples

--- a/calico-enterprise/reference/resources/stagedglobalnetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/stagedglobalnetworkpolicy.mdx
@@ -160,3 +160,22 @@ process it more efficiently.  Currently only one hint is defined:
 | Datastore type           | Create/Delete | Update | Get/List | Notes |
 | ------------------------ | ------------- | ------ | -------- | ----- |
 | Kubernetes API datastore | Yes           | Yes    | Yes      |
+
+#### List filtering on tiers
+List and Watch operations may specify label selector or field selector to filter StagedGlobalNetworkPolicies on tiers returned by the API server.
+When no selector is specified the API server returns all StagedGlobalNetworkPolicies from all tiers that the user has access to.
+
+##### Field selector
+When using the field selector, supported operators are = and ==
+
+Example to retrieve all StagedGlobalNetworkPolicies in default tier:
+```
+kubectl get stagedglobalnetworkpolicy --field-selector spec.tier=default
+```
+
+##### Label selector
+When using the label selector, supported operators are =, == and IN
+
+Example to retrieve all StagedGlobalNetworkPolicies in default and net-sec tier:
+```
+kubectl get stagedglobalnetworkpolicy -l 'projectcalico.org/tier in (default, net-sec)'
