--- a/calico-enterprise/reference/resources/stagednetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/stagednetworkpolicy.mdx
@@ -144,3 +144,23 @@ process it more efficiently.  Currently only one hint is defined:
 | Datastore type           | Create/Delete | Update | Get/List | Notes |
 | ------------------------ | ------------- | ------ | -------- | ----- |
 | Kubernetes API datastore | Yes           | Yes    | Yes      |
+
+#### List filtering on tiers
+List and Watch operations may specify label selector or field selector to filter StagedNetworkPolicies on tiers returned by the API server.
+When no selector is specified the API server returns all StagedNetworkPolicies from all tiers that the user has access to.
+
+##### Field selector
+When using the field selector, supported operators are = and ==
+
+Example to retrieve all StagedNetworkPolicies in default tier:
+```
+kubectl get stagednetworkpolicy.p --field-selector spec.tier=default
+```
+
+##### Label selector
+When using the label selector, supported operators are =, == and IN
+
+Example to retrieve all StagedNetworkPolicies in default and net-sec tier:
+```
+kubectl get stagednetworkpolicy.p -l 'projectcalico.org/tier in (default, net-sec)'
+```
