--- a/calico-enterprise/reference/resources/networkpolicy.mdx
+++ b/calico-enterprise/reference/resources/networkpolicy.mdx
@@ -172,3 +172,23 @@ Application layer policy match criteria are supported with the following restric
 | Datastore type           | Create/Delete | Update | Get/List | Notes |
 | ------------------------ | ------------- | ------ | -------- | ----- |
 | Kubernetes API datastore | Yes           | Yes    | Yes      |
+
+#### List filtering on tiers
+List and Watch operations may specify label selector or field selector to filter NetworkPolicies on tiers returned by the API server.
+When no selector is specified the API server returns all NetworkPolicies from all tiers that the user has access to.
+
+##### Field selector
+When using the field selector, supported operators are = and ==
+
+Example to retrieve all NetworkPolicies in default tier:
+```
+kubectl get networkpolicy.p --field-selector spec.tier=default
+```
+
+##### Label selector
+When using the label selector, supported operators are =, == and IN
+
+Example to retrieve all NetworkPolicies in default and net-sec tier:
+```
+kubectl get networkpolicy.p -l 'projectcalico.org/tier in (default, net-sec)'
+```
